* 2018-12-05 3.2
  add IBM-TS4300-MIB
  add IBM-AUTOMATION-QUERY-MIB
  add SNIA-SML-MIB
* 2018-12-03 3.1
  Oid definitions can be functions in other Mibs (INET-ADDRESS-MIB::InetAddress(ospfv3NbrAddressType))
* 2018-11-30 3.0.12
  update CISCO-BGP4-MIB
* 2018-11-23 3.0.11
  add OSPF-V3-MIB
* 2018-11-22 3.0.10.1
  bugfix in establish_snmp_secondary_session
* 2018-11-14 3.0.10
  add method ago_sysuptime()
* 2018-11-03 3.0.9.4
  allow individual internal_name()
* 2018-11-03 3.0.9.3
  better handling of snmp exceeded maxMsgSize
* 2018-10-29 3.0.9.2
  bugfix in Stulz-wib8000
* 2018-10-22 3.0.9.1
  eigene bloedheit
* 2018-10-22 3.0.9
  add FORTINET-CORE-MIB
* 2018-10-22 3.0.8.3
  fix a bug in CISCO-STACHWISE-MIB
* 2018-10-21 3.0.8.2
  randomize tmp-files, because $$ is not unique among goroutines
* 2018-10-19 3.0.8.1
  update CISCO-STACK-MIB and CISCO-STACKWISE-MIB
* 2018-10-17 3.0.8
  add HUAWEI-DEVICE-MIB
  add HUAWEI-ENERGY-MIB
* 2018-09-28 3.0.7
  add INET-ADDRESS-MIB
* 2018-09-26 3.0.6
  add HUAWEI-ENTITY-EXTENT-MIB
* 2018-09-25 3.0.5
  add CPQHLTH-MIB
  add IF-INVERTED-STACK-MIB
  add ThreeParMIB
* 2018-09-10 3.0.4.1
  fix context opt in csr
* 2018-08-31 3.0.4
  Merge pull request #17 from Napsty/fix-context-cache
* 2018-08-01 3.0.3
  add JUNIPER-ALARM-MIB
  add JUNIPER-RPS-MIB
  add JUNIPER-SRX5000-SPU-MONITORING-MIB
* 2018-07-26 3.0.2.9
  fix get_level
* 2018-07-25 3.0.2.8
  establish a snmp session with a buggy apc firmware
* 2018-07-02 3.0.2.7
  update XUPS-MIB
* 2018-06-18 3.0.2.6
  bugfix and improvement in get_snmp_table_objects
* 2018-03-29 3.0.2.5
  convert more extended ascii characters to ascii
* 2018-03-26 3.0.2.4
  fix an obvious bug in quantum-midrange-tape-library-mib
* 2018-03-23 3.0.2.3
  fix quantim-small-library id, add quantum-midrange
* 2018-03-07 3.0.2.2
  fix Sparseseen warning for older perls
  update f5-bigip-system-mib
* 2018-03-01 3.0.2.1
  fix DateAndTime parsing in Mib2Mib
* 2018-02-15 3.0.2
  add MIB-Dell-10892